# automata_theory

./: CMakeLists.txt  README.md  grammar.h  language.h  main.cpp
grammar/: grammar.cpp  grammar.hpp
language/: language.cpp  language.hpp
lib/automata/: automata.cpp  automata.hpp  converter.h  converter.hpp  dfa.cpp  dfa.hpp
lib/automata/DFA/: dfa.cpp  dfa.hpp
lib/automata/NFA/: nfa.cpp  nfa.hpp
lib/automata/dfa/: dfa.cpp  dfa.hpp
lib/automata/nfa/: nfa.cpp  nfa.hpp
lib/grammar/: grammar.cpp  grammar.hpp
lib/language/: language.cpp  language.hpp
lib/utils/format/: formatter.hpp
samples/: 1.cpp  10.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
